<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- here we use LinearLayout because all the content is fixed -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_normal"
        tools:context="com.udacity.shoestore.screens.welcome.WelcomeFragment">

        <TextView
            android:id="@+id/textViewInstructionsHeader"
            style="@style/tittleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoe_store" />

        <TextView
            android:id="@+id/textViewInstructionsMessage"
            style="@style/normalTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions" />

        <Button
            android:id="@+id/buttonInstructionsOk"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok" />
    </LinearLayout>
</layout>